Login Backend using JSON Web Token Created.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # BCrypt
 encryption.salt.rounds = 10
+
+jwt.algorithm.key = SuperSecureSecretKey
+jwt.issuer=eCommerce
+jwt.expiryInSeconds = 1200
