Email Verification pt 1 done.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,10 @@ encryption.salt.rounds = 10
 jwt.algorithm.key = SuperSecureSecretKey
 jwt.issuer=eCommerce
 jwt.expiryInSeconds = 1200
+
+
+#Email configuration
+email.from = no-reply@ecommerce.com
+
+#General Configuration
+app.frontend.url= http://ecommerce.org
