--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,11 @@ email.from = no-reply@ecommerce.com
 
 #General Configuration
 app.frontend.url= http://ecommerce.org
+
+
+# SMTP configuration
+spring.mail.host=localhost
+spring.mail.port=25
+#spring.mail.username=
+#spring.mail.password=
+#spring.properties.mail.smtp.auth=true;
